# decathlon-turnover

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release.py  requirements.txt  requirements_dev.txt
.github/workflows/: documentation.yaml  testing.yaml
decathlon_turnover/: main.py
decathlon_turnover/core/: event_handlers.py  middlewares.py  settings.py  setup_logger.py
decathlon_turnover/routes/: __init__.py  info.py  prediction.py  schemas.py  training.py
decathlon_turnover/utils/: model_manager.py  preprocessing.py
notebooks/: data_exploration.ipynb  forecasting.ipynb
tests/: conftest.py
tests/test_api/: test_webservice.py
tests/test_ml/: test_data.py  test_model.py
